# LangChain-ReAct-Linkedin-Work-search

./: README.md  linkedin_search.py  prompt.py  pyproject.toml  requirements.txt  schemas.py
